[package]
name = "nlzss11-zlib"
version = "0.1.0"
edition = "2021"
description = "Nintendo's LZSS algorithm found in Skyward Sword, compression with zlib-ng"
license = "MIT"
repository = "https://github.com/lepelog/nlzss11-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1"
