[package]
name = "nlzss11"
version = "1.0.1"
edition = "2021"
description = "Nintendo's LZSS algorithm found in Skyward Sword"
license = "MIT"
repository = "https://github.com/lepelog/nlzss11-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.38"
nlzss11-zlib = { path = "../nlzss11-zlib", version = "1.0.0", optional = true}

[features]
zlib = ["nlzss11-zlib"]
